"meshCut" directory of "dynamicMesh" has been completed

--- a/TnbDynamicMesh/TnbDynamicMesh.vcxproj
+++ b/TnbDynamicMesh/TnbDynamicMesh.vcxproj
@@ -196,8 +196,26 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.lxx) do @xcopy "%%f" "$(SolutionDir)inclu
     <ClInclude Include="TnbLib\dynamicMesh\fvMeshTools\fvMeshTools.hxx" />
     <ClInclude Include="TnbLib\dynamicMesh\fvMeshTools\fvMeshToolsI.hxx" />
     <ClInclude Include="TnbLib\dynamicMesh\layerAdditionRemoval\layerAdditionRemoval.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\cellCuts\cellCuts.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\cellLooper\cellLooper.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\cellLooper\geomCellLooper.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\cellLooper\hexCellLooper.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\cellLooper\topoCellLooper.hxx" />
     <ClInclude Include="TnbLib\dynamicMesh\meshCut\directions\directionInfo\directionInfo.hxx" />
     <ClInclude Include="TnbLib\dynamicMesh\meshCut\directions\directionInfo\directionInfoI.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\directions\directions.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\edgeVertex\edgeVertex.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\meshModifiers\boundaryCutter\boundaryCutter.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\meshModifiers\meshCutAndRemove\meshCutAndRemove.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\meshModifiers\meshCutter\meshCutter.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\meshModifiers\multiDirRefinement\multiDirRefinement.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\meshModifiers\refinementIterator\refinementIterator.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\meshModifiers\undoableMeshCutter\undoableMeshCutter.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\refineCell\refineCell.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\splitCell\splitCell.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\wallLayerCells\wallLayerCells.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\wallLayerCells\wallNormalInfo\wallNormalInfo.hxx" />
+    <ClInclude Include="TnbLib\dynamicMesh\meshCut\wallLayerCells\wallNormalInfo\wallNormalInfoI.hxx" />
     <ClInclude Include="TnbLib\dynamicMesh\module\DynamicMesh_Module.hxx" />
     <ClInclude Include="TnbLib\dynamicMesh\motionSmoother\badQualityToCell\badQualityToCell.hxx" />
     <ClInclude Include="TnbLib\dynamicMesh\motionSmoother\badQualityToFace\badQualityToFace.hxx" />
@@ -305,7 +323,25 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.lxx) do @xcopy "%%f" "$(SolutionDir)inclu
     <ClCompile Include="TnbLib\dynamicMesh\layerAdditionRemoval\layerAdditionRemoval.cxx" />
     <ClCompile Include="TnbLib\dynamicMesh\layerAdditionRemoval\removeCellLayer.cxx" />
     <ClCompile Include="TnbLib\dynamicMesh\layerAdditionRemoval\setLayerPairing.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\cellCuts\cellCuts.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\cellLooper\cellLooper.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\cellLooper\geomCellLooper.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\cellLooper\hexCellLooper.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\cellLooper\topoCellLooper.cxx" />
     <ClCompile Include="TnbLib\dynamicMesh\meshCut\directions\directionInfo\directionInfo.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\directions\directions.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\directions\directionsNamedEnum.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\edgeVertex\edgeVertex.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\meshModifiers\boundaryCutter\boundaryCutter.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\meshModifiers\meshCutAndRemove\meshCutAndRemove.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\meshModifiers\meshCutter\meshCutter.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\meshModifiers\multiDirRefinement\multiDirRefinement.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\meshModifiers\refinementIterator\refinementIterator.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\meshModifiers\undoableMeshCutter\undoableMeshCutter.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\refineCell\refineCell.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\splitCell\splitCell.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\wallLayerCells\wallLayerCells.cxx" />
+    <ClCompile Include="TnbLib\dynamicMesh\meshCut\wallLayerCells\wallNormalInfo\wallNormalInfo.cxx" />
     <ClCompile Include="TnbLib\dynamicMesh\motionSmoother\badQualityToCell\badQualityToCell.cxx" />
     <ClCompile Include="TnbLib\dynamicMesh\motionSmoother\badQualityToFace\badQualityToFace.cxx" />
     <ClCompile Include="TnbLib\dynamicMesh\motionSmoother\motionSmoother.cxx" />
